// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v1;

import "com/digitalasset/canton/protocol/v0/common.proto";
import "com/digitalasset/canton/protocol/v0/mediator.proto";
import "com/digitalasset/canton/protocol/v1/merkle.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "scalapb/scalapb.proto";

// Messages related to the transaction or transfer protocol sent by a mediator
// sbt protobufContinuityCheck will pass even if fields are added, because the mediator is trusted.

message TransactionResultMessage {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  google.protobuf.Timestamp request_id = 1;
  Verdict verdict = 2; // new Verdict type
  InformeeTree notification_tree = 5;
}

message Verdict {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  oneof some_verdict {
    google.protobuf.Empty approve = 1;
    ParticipantReject participant_reject = 2; // renamed validator_reject -> participant_reject
    MediatorReject mediator_reject = 3;
  }
  reserved 4; // removed "Empty timeout" from some_verdict
}

message InformeeTree {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  GenTransactionTree tree = 1;
}

// Renamed RejectionReasons -> ParticipantReject
message ParticipantReject {
  repeated com.digitalasset.canton.protocol.v0.RejectionReason reasons = 1;
}

// Renamed MediatorRejection -> MediatorReject
message MediatorReject {
  reserved 1; // removed "code" field
  string cause = 2; // renamed reason -> cause
  string error_code = 3;
  uint32 error_category = 4;
}

message MalformedMediatorRequestResult {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  google.protobuf.Timestamp request_id = 1;
  string domain_id = 2;
  com.digitalasset.canton.protocol.v0.ViewType view_type = 3;
  MediatorReject rejection = 4; // MediatorRejection -> MediatorReject
}

message TransferResult {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  google.protobuf.Timestamp request_id = 1;
  oneof domain {
    string origin_domain = 2; // result for transfer-out request
    string target_domain = 3; // result for transfer-in request
  }
  repeated string informees = 4;
  Verdict verdict = 5; // new Verdict type
}
